修复部分bug并测试